[package]
name = "forest-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Forest Team <forest@chainsafe.io>"]

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["e2e"]
resolver = "2"

[dependencies]
anyhow = "1"
axum = { version = "0.7", default-features = false, optional = true }
base64 = "0.22"
blake2b_simd = "1"
bls-signatures = "0.15"
chrono = "0.4"
cid = "0.11"
console_error_panic_hook = { version = "0.1" }
console_log = "1"
derive_more = { version = "2", features = ["from", "into"] }
fvm_ipld_encoding = "0.5"
fvm_shared = { version = "~4.7" }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
http = { version = "1", optional = true }
leptos = "0.7"
leptos-use = "0.15"
leptos_axum = { version = "0.7", default-features = false, optional = true }
leptos_meta = "0.7"
leptos_router = "0.7"
libsecp256k1 = "0.7"
log = "0.4"
multihash-codetable = { version = "0.1" }
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json"] }
send_wrapper = "0.6"
serde = "1"
serde_json = "1"
serde_tuple = "1"
tower = { version = "0.5", optional = true }
tower-service = "0.3"
url = { version = "2" }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
worker = { version = "0.5", features = ['http', 'axum'], optional = true }
worker-macros = { version = "0.5", features = ['http'], optional = true }

[dev-dependencies]
rusty-fork = "0.3"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:tower",
  "dep:http",
  "dep:axum",
  "leptos/ssr",
  "leptos_axum/wasm",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:worker",
  "dep:worker-macros",
]

[profile.release]
lto = true
opt-level = 's'
